--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ h5 {
 	Global Styles
 -------------------------------------------------------------------------------*/
 a {
-	color: #E84A27;
+	color: #ffcc5c;
 }
 a:hover, a:focus {
 	text-decoration: none;
@@ -302,7 +302,7 @@ ul li {
 
 .banner {
 	background-color: #65349c;
-	min-height: 550px;
+	min-height: 600px;
 }
 .banner-text {
 	padding-top: 20%;
@@ -310,7 +310,7 @@ ul li {
 .banner-text h1 {
 	color: #fff;
 	font-family: "Roboto Slab", sans-serif;
-	font-size: 80px;
+	font-size: 70px;
 	font-weight: 700;
 }
 .banner-text p {
@@ -469,67 +469,3 @@ ul li {
 
 
 
-/* ------------------------------------------------------------------------------
-	Contact form
--------------------------------------------------------------------------------*/
-.conForm
-{
-margin-top:50px;	
-}
-.conForm input {
-	background:#fafafa;
-	color:#797979;
-	padding:15px 30px;
-	border:none;
-	margin-right:3%;
-	margin-bottom:30px;
-	outline:none;
-	font-style:normal;
-	border:#f4f3f3 1px solid;
-	font-size:15px;
-}
-.conForm input.noMarr {
-	margin-right:0px;
-}
-.conForm textarea {
-	background:#fafafa;
-	color:#797979;
-	padding:15px 30px;
-	margin-bottom:18px;
-	outline:none;
-	height:300px;
-	font-style:normal;
-	resize:none;
-	font-size:15px;
-	border:#f4f3f3 1px solid;
-}
-
-
-.conForm .submitBnt {
-	background:#3bc492;
-	color: #fff;
-		padding: 15px 40px;
-	font-size: 13px;
-	font-weight: 600;
-	letter-spacing: 5px;
-	border: 0;
-	-moz-border-radius: 2px;
-	-webkit-border-radius: 2px;
-	border-radius: 2px;
-	display: inline-block;
-	text-transform: uppercase;
-}
-.conForm .submitBnt:hover {
-	background:#3d3d3d;
-	color:#fff;
-}
-.error_message {
-    color: #ff675f;
-    font-weight: 500;
-    padding-bottom: 15px;
-}
-#success_page h3 {
-    color: #5ed07b;
-    font-size: 17px;
-    font-weight: 700;
-}
