--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,7 @@ ul li {
 -------------------------------------------------------------------------------*/
 
 .banner {
-	background-color: #65349c;
+	background-image: linear-gradient(to right, purple , SteelBlue ); 
 	min-height: 650px;
 }
 .banner-text {
@@ -329,6 +329,7 @@ ul li {
 
 .footer {
 	text-align: center;
+	
 }
 .footer p {
 	font-family: "Roboto", sans-serif;
@@ -353,7 +354,7 @@ ul li {
 	width: 50px;
 	height: 50px;
 	border-radius: 50%;
-	padding: 8px 0;
+	padding: 10px 0px;
 	margin: 0 5px;
 	display: inline-block;
 	float: none;
