--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,10 @@ h5 {
 #profilePNG {
 	border-radius: 50%;
 }
+
+i {
+	font-size: 24px;
+}
 /* ------------------------------------------------------------------------------
 	Global Styles
 -------------------------------------------------------------------------------*/
@@ -351,8 +355,8 @@ ul li {
 	background: #3d3d3d none repeat scroll 0 0;
 	border-radius: 50%;
 	color: #ffffff;
-	width: 50px;
-	height: 50px;
+	width: 45px;
+	height: 45px;
 	border-radius: 50%;
 	padding: 10px 0px;
 	margin: 0 5px;
