added polaroid image

--- a/css/main.css
+++ b/css/main.css
@@ -503,7 +503,18 @@ ul li {
 	margin-bottom: 30px;
 }
 
-
+div.polaroid {
+	margin-left: 25%;
+	width: 50%;
+	background-color: white;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	margin-bottom: 0px;
+}
+  
+div.container {
+	text-align: center;
+	padding: 0px 55px;
+}
 
 
 
