--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,7 @@ ul li {
 	/*min-height: 650px;*/
 }
 .banner-text {
-	padding-top: 12%;
+	padding-top: 10%;
 }
 .banner-text h1 {
 	color: #000;
@@ -324,8 +324,8 @@ ul li {
 	font-weight: 400;
 	letter-spacing: 3px;
 	line-height: 24px;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 /* ------------------------------------------------------------------------------
@@ -499,21 +499,25 @@ ul li {
 	font-weight: 400;
 	letter-spacing: 3px;
 	line-height: 24px;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 15px;
+	margin-bottom: 15px;
 }
 
 div.polaroid {
-	margin-left: 20%;
-	width: 60%;
+	width: 65%;
 	background-color: white;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	margin-bottom: 0px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
+	margin-top: 20px;
+	margin-left: 18%;
+}
+
+div.polaroid p {
+	font-size: 16px;
 }
   
 div.container {
 	text-align: center;
-	margin-bottom: 30px;
+
 }
 
 
