--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,9 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto%20Slab:300,400,500,600,700);
 
+background: rgb(244,221,231);
+background: linear-gradient(90deg, rgba(244,221,231,1) 0%, rgba(228,233,148,1) 73%);
+
 p {
 	font-size: 14px;
 	color: #6c7279;
