--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,3 @@
-/* ------------------------------------------------------------------------------
-	Template Name: Minifolio
-	Author: Designstub
-	Author URI: http://www.designstub.com
-	License: GNU General Public License version 3.0
-	License URI: http://www.gnu.org/licenses/gpl-3.0.html
-	Version: 1.0
-
-/* ------------------------------------------------------------------------------
-	Typography
--------------------------------------------------------------------------------*/
-
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto%20Slab:300,400,500,600,700);
 
@@ -316,17 +304,14 @@ ul li {
 .banner-text h1 {
 	color: #000;
 	font-family: "Roboto Slab", sans-serif;
-	font-size: 80px;
-	font-weight: 700;
 }
 .banner-text p {
 	color: white;
-	text-align: justify;
-	font-size: 20px;
-	font-weight: 400;
-	line-height: 20px;
+	text-align: left;
+	font-size: 22px;
+	line-height: 24px;
 	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 /* ------------------------------------------------------------------------------
