--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,7 @@ h5 {
 
 i {
 	font-size: 30px;
+    padding: 5px;
 }
 /* ------------------------------------------------------------------------------
 	Global Styles
