--- a/css/main.css
+++ b/css/main.css
@@ -491,7 +491,7 @@ ul li {
 }
 
 div.polaroid {
-	width: 50;
+	width: 35%;
 	background-color: #FAF9F6;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.29);
 /* 	margin-top: 30%;
