--- a/css/main.css
+++ b/css/main.css
@@ -493,7 +493,7 @@ ul li {
 div.polaroid {
 	background-color: #FAF9F6;
 	box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(250, 249, 246, 0.45); 
-	margin-top: auto;
+	margin-top: 10%;
         margin-right: auto;
         margin-bottom: auto;
         margin-left: auto;
