--- a/css/main.css
+++ b/css/main.css
@@ -497,7 +497,7 @@ div.polaroid {
         margin-right: auto;
         margin-bottom: auto;
         margin-left: auto;
-  	width: 35%;
+  	width: 180px;
 	padding: 6px;
 }
 
