changing font sizes

--- a/css/main.css
+++ b/css/main.css
@@ -9,17 +9,16 @@ p {
 	color: white;
 }
 h1 {
-	font-size: 50px;
-	color: #D3D3D3;
+	font-size: 42px;
+	color: white;
 }
 h2 {
-	font-size: 42px;
-	color: #D3D3D3;
+	font-size: 22px;
+	color: white;
 }
 h3 {
-	font-size: 28px;
+	font-size: 22px;
 	color: #D3D3D3;
-	font-weight: 300;
 }
 h4 {
 	font-size: 22px;
@@ -490,10 +489,10 @@ ul li {
 
 div.polaroid {
 	background-color: #FAF9F6;
-	margin-top: 5%;
-        margin-right: auto;
-        margin-bottom: auto;
-        margin-left: auto;
+	margin-top: 10%;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-left: auto;
   	width: 170px;
 	padding: 5px;
 }
