--- a/css/main.css
+++ b/css/main.css
@@ -6,34 +6,34 @@ background: linear-gradient(90deg, rgba(244,221,231,1) 0%, rgba(228,233,148,1) 7
 
 p {
 	font-size: 8px;
-	color: white;
+	color: #F0F0F0;
 }
 h1 {
 	font-size: 42px;
-	color: white;
+	color: #F0F0F0;
 }
 h2 {
 	font-size: 22px;
-	color: white;
+	color: #F0F0F0;
 }
 h3 {
 	font-size: 22px;
-	color: #D3D3D3;
+	color: #F0F0F0;
 }
 h4 {
 	font-size: 22px;
-	color: #2d3033;
+	color: #F0F0F0;
 	font-weight: 400;
 }
 h5 {
 	font-size: 18px;
-	color: #2d3033;
+	color: #F0F0F0;
 	text-transform: uppercase;
 	font-weight: 700;
 }
 .btn {
 	background-color: #3bc492;
-	color: #000;
+	color: #F0F0F0;
 	font-size: 13px;
 	font-weight: 600;
 	letter-spacing: 5px;
@@ -302,7 +302,7 @@ ul li {
 	padding-top: 10%;
 }
 .banner-text h1 {
-	color: #000;
+	color: white;
 	font-family: "Roboto Slab", sans-serif;
 }
 .banner-text p {
@@ -517,7 +517,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #171717;
-  color: #000;
+  color: white;
   line-height: 1.6;
   position: relative;
   font-family: sans-serif;
